--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "meet-to-dine",
-  "version": "0.0.0",
-  "description": "Hello Expo!",
-  "author": null,
-  "private": true,
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "CAL",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@expo/vector-icons": "^5.1.0",
-    "@shoutem/ui": "^0.21.3",
-    "color": "^2.0.0",
-    "expo": "^21.0.0",
-    "moment": "^2.18.1",
-    "query-string": "^5.0.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
-    "react-native-extended-stylesheet": "^0.6.0",
-    "react-native-linear-gradient": "^2.3.0",
-    "react-native-maps": "^0.13.0",
-    "react-native-vector-icons": "^4.4.1"
-  }
+    "express": "^4.16.1",
+    "request": "^2.83.0",
+    "sort-json": "^1.5.2",
+    "sort-json-array": "^0.1.7"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
